--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=notification
 
+# RABBITMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
+
+rabbitmq.exchange.name=orders-created
+rabbitmq.queue.name=orders-created-notificacao
