Add email sending support to Notification microservice using MailHog

--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.rabbitmq.port=5672
 
 rabbitmq.exchange.name=orders-created
 rabbitmq.queue.name=orders-created-notification
+
+# SPRING MAIL
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=false
