--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   rabbitmq-poc-1:
     image: rabbitmq:3.10.5-management
@@ -14,6 +12,13 @@ services:
     ports:
       - '15672:15672'
       - '5672:5672'
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    container_name: mailhog
+    ports:
+      - '1025:1025'
+      - '8025:8025'
 
 volumes:
   rabbitmq-poc-1_data:
