--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -15,3 +15,14 @@ spring.mail.port=1025
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.smtp.starttls.required=false
+
+# MESSAGE RETRY CONFIGURATION
+# Prevents the message from being requeued if processing fails
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+# Enables retry behavior for failed messages
+spring.rabbitmq.listener.simple.retry.enabled=true
+
+spring.rabbitmq.listener.simple.retry.max-interval=5m
+spring.rabbitmq.listener.simple.retry.max-attempts=10
+spring.rabbitmq.listener.simple.retry.initial-interval=5s
+spring.rabbitmq.listener.simple.retry.multiplier=3
