--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -23,6 +23,9 @@ spring.rabbitmq.listener.simple.default-requeue-rejected=false
 spring.rabbitmq.listener.simple.retry.enabled=true
 
 spring.rabbitmq.listener.simple.retry.max-interval=5m
-spring.rabbitmq.listener.simple.retry.max-attempts=10
+spring.rabbitmq.listener.simple.retry.max-attempts=3
 spring.rabbitmq.listener.simple.retry.initial-interval=5s
 spring.rabbitmq.listener.simple.retry.multiplier=3
+
+rabbitmq.exchange.dlx.name=orders-created.dlx
+rabbitmq.queue.dlq.name=orders-created-notification.dlq
